--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,48 @@
 version: '3'
 services:
-  mongodb1: 
+
+  mongodb1:  
+    image: mvertes/alpine-mongo:3.4.10-0
     container_name: mongodb1
-    command: /usr/bin/mongod --replSet rs --journal --smallfiles
     hostname: mongodb1
-    image: mvertes/alpine-mongo
-    links: 
-      - mongodb2
-      - mongodb3
-    ports: 
-      - "27017:27017"
-      - "28017:28017"
-    restart: always
+    ports: ["27017:27017","28017:28017"]
+    command: mongod --noprealloc --smallfiles --replSet rs0 --dbpath /data/db --nojournal --oplogSize 16 --noauth --rest
+    environment:
+      TERM: xterm    
   
-  mongodb2: 
+  mongodb2:  
+    image: mvertes/alpine-mongo:3.4.10-0
     container_name: mongodb2
-    command: /usr/bin/mongod --replSet rs --journal --smallfiles
     hostname: mongodb2
-    image: mvertes/alpine-mongo
-    ports: 
-      - "27018:27017"
-      - "28018:28017"
-    restart: always
+    ports: ["27018:27017","28018:28017"]  
+    command: mongod --noprealloc --smallfiles --replSet rs0 --dbpath /data/db --nojournal --oplogSize 16 --noauth --rest
+    environment:
+      TERM: xterm    
   
-  mongodb3: 
+  mongodb3:  
+    image: mvertes/alpine-mongo:3.4.10-0
     container_name: mongodb3
-    command: /usr/bin/mongod --replSet rs --journal --smallfiles
-    hostname: mongodb3
-    image: mvertes/alpine-mongo
-    ports: 
-      - "27019:27017"
-      - "28019:28017"
-    restart: always
-
-  mongodbarbiter: 
+    hostname: mongodb3  
+    ports: ["27019:27017","28019:28017"]      
+    command: mongod --noprealloc --smallfiles --replSet rs0 --dbpath /data/db --nojournal --oplogSize 16 --noauth --rest
+    environment:
+      TERM: xterm    
+  
+  mongodbarbiter:  
+    image: mvertes/alpine-mongo:3.4.10-0
     container_name: mongodbarbiter
-    command: /usr/bin/mongod --replSet rs --journal --smallfiles
     hostname: mongodbarbiter
-    image: mvertes/alpine-mongo
-    ports: 
-      - "27020:27017"
-      - "28020:28017"
-    restart: always
-
-  mongosetup: 
-    container_name: mongosetup
-    image: mvertes/alpine-mongo
+    ports: ["27020:27017","28020:28017"]
+    command: mongod --noprealloc --smallfiles --replSet rs0 --dbpath /data/db --nojournal --oplogSize 16 --noauth --rest
+    environment:
+      TERM: xterm    
+  
+  client:  
+    build: ./setup
+    container_name: client
+    hostname: client
+    links: [mongodb1,mongodb2,mongodb3,mongodbarbiter]
     environment:
       MONGODB_USER: test
       MONGODB_PASSWORD: "@tesT123"
-      MONGODB_DB: testdb 
-    links: 
-      - mongodb1
-      - mongodb2
-      - mongodb3
-      - mongodbarbiter
-    command: bash -c "chmod +x /run.sh && chmod +x /wait-until-started.sh && chmod +x /wait-until-master-started.sh && sh /run.sh"
-    volumes:
-      - "./scripts:/root/scripts"
-      - ".:/root"
-    depends_on:
-      - mongodb1
-      - mongodb2
-      - mongodb3    
-      - mongodbarbiter
+      MONGODB_DB: testdb    
